<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".CreatePostActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_students"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/email"


        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"


        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:layout_editor_absoluteX="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textSize="10sp"
        android:textStyle="italic"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_post"
        android:layout_marginTop="10dp"
        android:textSize="25sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <ImageView
        android:id="@+id/iconaddimg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_addimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="25dp"


        android:hint="@string/post_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconaddimg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/post_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_margin="8dp"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/post_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/createpost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create"
        android:textSize="10sp"
        android:layout_margin="8dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:visibility="invisible"
        android:indeterminateTint="@color/teal_200"

        app:layout_constraintEnd_toEndOf="@+id/createpost"
        app:layout_constraintStart_toStartOf="@+id/createpost"
        app:layout_constraintTop_toBottomOf="@+id/createpost" />



</androidx.constraintlayout.widget.ConstraintLayout>