<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="5dp"
app:cardCornerRadius="10dp"
    android:outlineSpotShadowColor="@color/black"
    android:background="@color/white"

    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="5"
            android:padding="5dp"
            android:layout_height="wrap_content">



            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/email"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/stdemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="17sp"

                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/sdas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/password"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stdemail" />


            <TextView
                android:id="@+id/stdpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="17sp"


                app:layout_constraintStart_toStartOf="@+id/sdas"
                app:layout_constraintTop_toBottomOf="@+id/sdas" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/college"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/stdcollege"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="17sp"

                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/club"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/stdcollege" />


            <TextView
                android:id="@+id/stdclub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

        </LinearLayout>












        <ImageView
            android:id="@+id/stddelete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_delete"
            android:layout_weight="0"
            android:background="@android:color/holo_red_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </LinearLayout>





</androidx.cardview.widget.CardView>