<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/eclub"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="16dp"

        android:hint="@string/email"


        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        android:hint="@string/password"

        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/forget_passwordTV"


        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
        app:passwordToggleTintMode="multiply"
        tools:layout_editor_absoluteX="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"

            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forget_passwordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"

        android:layout_margin="10dp"
        android:padding="5dp"

        android:text="@string/forgot"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textSize="10sp"
        android:textStyle="italic"

        app:layout_constraintBottom_toTopOf="@+id/login_progressBar"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/forget_passwordTV" />


    <ProgressBar

        android:id="@+id/login_progressBar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:indeterminateTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login" />


</androidx.constraintlayout.widget.ConstraintLayout>